Add SecurityConfig